[tool.poetry]
name = "tokenstream"
version = "1.2.3"
description = "A versatile token stream for handwritten parsers"
authors = ["Valentin Berlier <berlier.v@gmail.com>"]
license = "MIT"

homepage = "https://github.com/vberlier/tokenstream"
repository = "https://github.com/vberlier/tokenstream"
documentation = "https://github.com/vberlier/tokenstream"

readme = "README.md"

keywords = [
  "parsing",
  "tokenizer",
  "lexer",
  "recursive-descent-parser",
  "token-stream",
]

include = ["tokenstream/py.typed"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
pytest = "^6.2.5"
isort = "^5.9.3"
python-semantic-release = "^7.19.2"
mudkip = "^0.4.12"

[tool.black]
target-version = ["py38"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | node_modules
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[tool.semantic_release]
branch = "main"
version_variable = ["tokenstream/__init__.py:__version__"]
version_toml = "pyproject.toml:tool.poetry.version"
build_command = "poetry build && poetry run mudkip build --update-gh-pages --repository https://x-access-token:${GH_TOKEN}@github.com/vberlier/tokenstream"

[tool.mudkip]
preset = "furo"

[tool.mudkip.override]
html_title = "tokenstream"
suppress_warnings = ["myst.header"]
extensions = ["sphinx.ext.intersphinx"]
intersphinx_mapping = {python = ["https://docs.python.org/3", ""]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
