[tool.poetry]
name = "tokenstream"
version = "1.4.2"
description = "A versatile token stream for handwritten parsers"
authors = ["Valentin Berlier <berlier.v@gmail.com>"]
license = "MIT"

homepage = "https://github.com/vberlier/tokenstream"
repository = "https://github.com/vberlier/tokenstream"
documentation = "https://github.com/vberlier/tokenstream"

readme = "README.md"

keywords = [
  "parsing",
  "tokenizer",
  "lexer",
  "recursive-descent-parser",
  "token-stream",
]

include = ["tokenstream/py.typed"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.2"
isort = "^5.10.1"
python-semantic-release = "^7.28.1"
mudkip = "^0.7.0"

[tool.black]
target-version = ["py38"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | node_modules
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[tool.semantic_release]
branch = "main"
version_variable = ["tokenstream/__init__.py:__version__"]
version_toml = "pyproject.toml:tool.poetry.version"
build_command = "poetry build && poetry run mudkip build --update-gh-pages --repository https://x-access-token:${GH_TOKEN}@github.com/vberlier/tokenstream"

[tool.mudkip]
preset = "furo"

[tool.mudkip.override]
html_title = "tokenstream"
suppress_warnings = ["myst.header"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
